--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-index
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Mango Bar, cocktails and healing remedies in paradise">
+    <meta name="author" content="">
+    <meta name="keywords" content="mango, bar, ko, bulon, thailand, cocktail, bond, mojito">
+   
+    <title>Mango Bar - Ko Bulon</title>
+    <link href="cover.css" rel="stylesheet">
+  </head>
+
+  <body>
+
+    <div class="site-wrapper">
+
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand">Mango Bar</h3>
+             
+            </div>
+          </div>
+
+          <div class="inner cover">
+           
+            <p class="lead">Bond's Mango Bar and Beach Mojito Bar on Ko Bulon, Thailand</p>
+            <p class="lead">
+              <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+            </p>
+          </div>
+
+          <div class="mastfoot">
+            <div class="inner">
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+    <!-- Bootstrap core JavaScript -->
+  </body>
+</html>
