--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Mango Bar, cocktails and healing remedies in paradise">
-    <meta name="author" content="">
+    <meta name="author" content="hello">
     <meta name="keywords" content="mango, bar, ko, bulon, thailand, cocktail, bond, mojito">
    
     <title>Mango Bar - Ko Bulon</title>
